# risk-gated-execution

./: .gitignore  AGENTS.md  ARTICLE_DRAFT.md  HACKER_NEWS_POST.txt  LICENSE-MIT  README.md  REDDIT_RUST_POST.docx  REDDIT_RUST_POST.txt  RED_TEAM_PUBLICATION_REVIEW.md  SECURITY.md  TALK_PROPOSAL.md
code/deployment_agent_vertical_slice/: ARCHITECTURE.md  BUSINESS_CASE.md  Makefile  README.md
code/deployment_agent_vertical_slice/attacks/: 01_safe_deploy.json  02_missing_receipt.json  03_tampered_payload.json  04_expired_receipt.json  05_unauthorized_target.json  06_stale_evidence.json  07_incident_freeze.json  08_no_rollback.json  09_poisoned_context_valid_intent.json  10_self_signed_evidence.json  11_replay_attack.json
code/deployment_agent_vertical_slice/demo_deployment_agent/: __init__.py  crypto_utils.py  deployment_tool.py  evidence_provider.py  orchestrator.py  redteam_runner.py  riskgate_service.py
code/mcp_stdio_broker/: Cargo.toml  Dockerfile  Makefile  README.md  bench_ipc.py  debug.rs  dummy_mcp.py  orchestrator_middleware.py  print_sig.rs  shadow_actuator.py
code/mcp_stdio_broker/src/: crypto.rs  main.rs  models.rs  test_codec.rs
code/risk_gated_execution/: README.md  metrics.py  risk_gate.py  run_benchmark.py  scenarios.py
code/risk_gated_execution/results/: ablation_results.csv  ablation_results.json  audit_ledger.json  scenario_results.csv  summary.json  summary.md
